--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,8 @@
     <packaging>pom</packaging>
     <modules>
         <module>guli_teacher</module>
+        <module>guli_common</module>
+        <module>guli_oss</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -73,6 +75,15 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
     </build>
 
 </project>
